<resources>
    <string name="app_name">Group3FinalProject</string>
    <string name="title_home">News</string>
    <string name="title_dashboard">Stocks</string>
    <string name="title_notifications">Notification</string>
    <string name="myContentString">Notification</string>
    <string name="RSSFeedManagementText">Manage RSS Feeds</string>
    <string name="returnToRSSFeed">Return</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="add_stock_button">Add Stock</string>
    <string name="search">Search</string>
    <string name="time_range_one_day">1D</string>
    <string name="time_range_one_week">1W</string>
    <string name="time_range_one_month">1M</string>
    <string name="time_range_three_month">3M</string>
    <string name="time_range_one_year">1Y</string>
    <string name="time_range_all">All</string>
    <string name="quotes_open">Open</string>
    <string name="quotes_close">Previous Close</string>
    <string name="quotes_high">High</string>
    <string name="quotes_low">Low</string>
    <string name="empty_not_saved">Stock field was empty, Not Saved</string>
    <string name="helpMenuText">Help</string>
    <string name="authors_title">Authors</string>
    <string name="version_title">Version Number</string>
    <string name="instructions_title">Instructions</string>
    <string name="help_dialog_title">Help</string>
    <string name="button_ok_text">OK</string>
    <string name="app_version">\t1.0</string>
    <string name="app_instructions_description">This app lets you to track down stocks.\nYou got to \n\t1.Select News tab for getting latest stock news \n\t2.Select Stocks tab for adding and viewing custom stock list \n\t3.Select Notificatons tab for seeing the recent activities made on the app\n\tand corresponding updates</string>
    <string name="app_authors_description">\tAamir Khimani\n\tJeffrey Guernsey\n\tLalithambal Swaminathan\n\tNivedhitha Govindaraj\n\tYunfei CUI</string>
    <string name="app_instructions">App Instructions</string>
    <string name="add_stock_search">Search</string>
    <string name="notification_Settings_notifcation_title">Notification</string>
    <string name="notification_settings_interval_min">Interval(Min 15 mins)</string>
    <string name="notification_interval_set_interval">set interval</string>
    <string name="stock_detail_back">back</string>
    <string name="stock_detail_open">open</string>
    <string name="RSS_management_include">Include</string>
</resources>