<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".StockDetailActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/stock_symbol"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="2"
                android:text="open" />
            <Button
                android:id="@+id/stock_detail_go_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:textSize="10sp"
                android:text="back"
                android:onClick="returnToMainView"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">
            <com.jjoe64.graphview.GraphView
                android:id="@+id/graph"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RadioGroup
                android:id="@+id/time_range"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/time_range_day"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/time_range_one_day" />

                <RadioButton
                    android:id="@+id/time_range_week"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/time_range_one_week" />

                <RadioButton
                    android:id="@+id/time_range_month"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/time_range_one_month" />

                <RadioButton
                    android:id="@+id/time_range_3month"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/time_range_three_month" />

                <RadioButton
                    android:id="@+id/time_range_year"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/time_range_one_year" />

                <RadioButton
                    android:id="@+id/time_range_all"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/time_range_all" />
            </RadioGroup>
        </LinearLayout>

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:columnCount="2"
            app:rowCount="2">

            <TextView
                android:id="@+id/stock_open"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:layout_rowWeight="1"
                android:text="@string/quotes_open" />

            <TextView
                android:id="@+id/stock_close"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="1"
                app:layout_rowWeight="1"
                android:text="@string/quotes_close" />


            <TextView
                android:id="@+id/stock_high"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:layout_rowWeight="1"
                android:text="@string/quotes_high" />

            <TextView
                android:id="@+id/stock_low"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="1"
                app:layout_rowWeight="1"
                android:text="@string/quotes_low" />
        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>
</RelativeLayout>